update copyright years
Change-Id: I42f4cce88836fd4d27f1a8d384ec6ca1cf2ecf76

--- a/l4sys/doc/l4sys-l4f-groups.dox
+++ b/l4sys/doc/l4sys-l4f-groups.dox
@@ -2,7 +2,7 @@
 /* -*- c -*- */
 /*
  * Copyright (C) 2009-2010 Technische Universität Dresden.
- * Copyright (C) 2015-2022 Kernkonzept GmbH.
+ * Copyright (C) 2015-2022, 2024 Kernkonzept GmbH.
  *
  * License: see LICENSE.spdx (in this directory or the directories above)
  */
